<resources>
    <string name="app_name">KEYPR Test</string>
    <string name="status_inside">Status: inside</string>
    <string name="status_outside">Status: outside</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wifiNameHint">WiFi Name</string>
    <string name="locationLatHint">Latitude</string>
    <string name="locationLonHint">Longitude</string>
    <string name="locationSectionTitle">Location:</string>
    <string name="wifiSectionTitle">WiFi network:</string>
    <string name="locationRadiusHint">Radius(km)</string>
    <string name="title_location_permission">Location disabled</string>
    <string name="text_location_permission">Please grant location permission</string>

</resources>
