<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.keypr.test.MainActivity">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/status_min_height"
            android:text="@string/status_outside"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="@dimen/status_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_items_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationSectionTitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilLocationLat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/screen_items_margin"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etLocationLat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/locationLatHint"
                        android:inputType="numberDecimal"
                        android:nextFocusForward="@+id/etLocationLon"
                        android:nextFocusRight="@+id/etLocationLon"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilLocationLon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/screen_items_margin"
                    android:layout_weight="1">

                    <EditText
                        android:id="@id/etLocationLon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/locationLonHint"
                        android:inputType="numberDecimal"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilLocationRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLocationRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/locationRadiusHint"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_sections_padding"
                android:text="@string/wifiSectionTitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilWifiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etWifiName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wifiNameHint"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>